--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+
+
 mybatis:
   type-aliases-package: zbh.study.domain
   configuration:
@@ -39,3 +41,14 @@ spring:
     # 合并多个DruidDataSource的监控数据
     useGlobalDataSourceStat: true
     ###############以上为配置druid添加的配置########################################
+##########Tomcat 参数调整####
+server:
+  tomcat:
+    #默认线程100，这里合理调大
+    max-threads: 500
+    #连接等待队列容量
+    accept-count: 3000
+    #最大连接数默认10000
+    max-connections: 15000
+  #连接超时
+  #connection-timeout: 5
